[gd_scene load_steps=6 format=3 uid="uid://cbv4v5l8m8s18"]

[ext_resource type="Script" path="res://src/Main.gd" id="1_27l46"]
[ext_resource type="Texture2D" uid="uid://dxqqiypugyt3q" path="res://assets/game-icons/right.png" id="2_g21xj"]
[ext_resource type="Texture2D" uid="uid://bw67e84jfryea" path="res://assets/game-icons/pause.png" id="3_5uvlh"]
[ext_resource type="Texture2D" uid="uid://lo7b8773fcli" path="res://assets/game-icons/stop.png" id="4_58voe"]
[ext_resource type="Texture2D" uid="uid://c65hgkldf7g3x" path="res://assets/game-icons/return.png" id="5_s4ufc"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27l46")

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 194.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="Time" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 142
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="TimeControl" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Stop" type="TextureButton" parent="VBoxContainer/TimeControl"]
layout_mode = 2
texture_normal = ExtResource("4_58voe")

[node name="Start" type="TextureButton" parent="VBoxContainer/TimeControl"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_g21xj")
texture_pressed = ExtResource("3_5uvlh")

[node name="Restart" type="TextureButton" parent="VBoxContainer/TimeControl"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_s4ufc")

[node name="TimeSettings" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="MinusMinutes" type="Button" parent="VBoxContainer/TimeSettings"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "-60"

[node name="MinusSeconds" type="Button" parent="VBoxContainer/TimeSettings"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "-1"

[node name="Reset" type="Button" parent="VBoxContainer/TimeSettings"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "60"

[node name="PlusSeconds" type="Button" parent="VBoxContainer/TimeSettings"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "+1"

[node name="PlusMinutes" type="Button" parent="VBoxContainer/TimeSettings"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "+60"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/TimeControl/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="VBoxContainer/TimeControl/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/TimeControl/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/TimeSettings/MinusMinutes" to="." method="_on_minus_minutes_pressed"]
[connection signal="pressed" from="VBoxContainer/TimeSettings/MinusSeconds" to="." method="_on_minus_seconds_pressed"]
[connection signal="pressed" from="VBoxContainer/TimeSettings/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/TimeSettings/PlusSeconds" to="." method="_on_plus_seconds_pressed"]
[connection signal="pressed" from="VBoxContainer/TimeSettings/PlusMinutes" to="." method="_on_plus_minutes_pressed"]
